package NYT.NHiveServer.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqCommitSimpleTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
    optional NYT.NProto.TGuid mutation_id = 2;
    required uint64 commit_timestamp = 3;
}

message TReqCommitDistributedTransactionPhaseOne
{
    required NYT.NProto.TGuid transaction_id = 1;
    optional NYT.NProto.TGuid mutation_id = 2;
    repeated NYT.NProto.TGuid participant_cell_ids = 3;
}

message TReqCommitDistributedTransactionPhaseTwo
{
    required NYT.NProto.TGuid transaction_id = 1;
    required uint64 commit_timestamp = 2;
}

message TReqFinishDistributedTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
}

message TReqAbortTransaction
{
    optional NYT.NProto.TGuid mutation_id = 1;
    required NYT.NProto.TGuid transaction_id = 2;
    optional bool force = 3;
}

////////////////////////////////////////////////////////////////////////////////
